--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,30 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #0055ff;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #e1e6f1;
+  cursor: pointer;
+}
+
+.scrollWhite::-webkit-scrollbar-thumb {
+  background-color: #0055ff !important;
+}
+
+.oneLine {
+  overflow: hidden !important;
+  text-overflow: ellipsis !important;
+  display: -webkit-box !important;
+  -webkit-line-clamp: 1 !important;
+  -webkit-box-orient: vertical !important;
+}
